cleanup: remove unused components, lib, assets; add cross-platform submit script

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "submit": "node scripts/build-submission.js"
   },
   "dependencies": {
     "vue": "^3.4.0"
